--- a/app/src/main/res/layout/vendor_activity_cart.xml
+++ b/app/src/main/res/layout/vendor_activity_cart.xml
@@ -20,10 +20,10 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="@dimen/_20sdp"
         android:background="@drawable/text_background"
-        android:paddingBottom="@dimen/_5sdp"
         android:paddingLeft="@dimen/_10sdp"
-        android:paddingRight="@dimen/_10sdp"
         android:paddingTop="@dimen/_5sdp"
+        android:paddingRight="@dimen/_10sdp"
+        android:paddingBottom="@dimen/_5sdp"
         android:text="Cart empty"
         android:visibility="gone"
         app:edittextfont="Raleway-Regular.ttf" />
@@ -120,8 +120,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="1dp"
-                    android:layout_marginRight="1dp"
-                    android:layout_marginTop="1dp" />
+                    android:layout_marginTop="1dp"
+                    android:layout_marginRight="1dp" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
@@ -179,7 +179,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
-                android:text="Place Order"
+                android:text="Checkout"
                 android:textColor="@color/white"
                 app:edittextfont="Raleway-Bold.ttf" />
 
