--- a/app/src/main/res/layout/vendor_orderhist_adapter_layout.xml
+++ b/app/src/main/res/layout/vendor_orderhist_adapter_layout.xml
@@ -4,10 +4,10 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/_1sdp"
     android:layout_marginLeft="@dimen/_6sdp"
-    android:layout_marginRight="@dimen/_6sdp"
     android:layout_marginTop="@dimen/_5sdp"
+    android:layout_marginRight="@dimen/_6sdp"
+    android:layout_marginBottom="@dimen/_1sdp"
     android:elevation="2dp"
     android:orientation="vertical"
     app:cardElevation="2dp">
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="@dimen/_8sdp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -81,36 +82,37 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-           android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:orientation="horizontal">
 
 
-                <com.yberry.dinehawaii.customview.CustomTextView
-                    android:id="@+id/customTextView9"
-                    style="@style/TextAppearance.AppCompat.Subhead"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="Vendor Name : "
-                    app:edittextfont="Raleway-Bold.ttf" />
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/customTextView9"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Vendor : "
+                app:edittextfont="Raleway-Bold.ttf" />
 
-                <com.yberry.dinehawaii.customview.CustomTextView
-                    android:id="@+id/nameTextView"
-                    style="@style/TextAppearance.AppCompat.Subhead"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="NA"
-                    app:edittextfont="Raleway-Regular.ttf" />
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/nameTextView"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="NA"
+                app:edittextfont="Raleway-Regular.ttf" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-           android:layout_marginTop="@dimen/_5sdp"
-            android:orientation="horizontal">
+            android:layout_marginTop="@dimen/_5sdp"
+            android:orientation="horizontal"
+            android:visibility="gone">
 
 
             <com.yberry.dinehawaii.customview.CustomTextView
