--- a/app/src/main/res/layout/fragment_manage_vendors.xml
+++ b/app/src/main/res/layout/fragment_manage_vendors.xml
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
+
     <com.yberry.dinehawaii.customview.CustomTextView
         android:id="@+id/noData"
         android:layout_width="wrap_content"
-        android:layout_margin="@dimen/_20sdp"
         android:layout_height="wrap_content"
-        android:text="No Vendors"
         android:layout_centerHorizontal="true"
-        android:paddingLeft="@dimen/_10sdp"
-        android:paddingRight="@dimen/_10sdp"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingBottom="@dimen/_5sdp"
+        android:layout_margin="@dimen/_20sdp"
         android:background="@drawable/text_background"
+        android:paddingLeft="@dimen/_10sdp"
+        android:paddingTop="@dimen/_5sdp"
+        android:paddingRight="@dimen/_10sdp"
+        android:paddingBottom="@dimen/_5sdp"
+        android:text="No Vendors"
         android:visibility="gone"
-        app:edittextfont="Raleway-Regular.ttf"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        app:edittextfont="Raleway-Regular.ttf" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentBottom="true"
+        android:background="@color/green">
+
+        <com.yberry.dinehawaii.customview.CustomButton
+            android:id="@+id/addvendorbtn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
-    </LinearLayout>
+            android:background="@null"
+            android:text="Add New Vendor"
+            android:textColor="@color/white" />
+    </RelativeLayout>
 
 
 </RelativeLayout>
