--- a/app/src/main/res/layout/order_feedback_response_adapter.xml
+++ b/app/src/main/res/layout/order_feedback_response_adapter.xml
@@ -1,88 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="0dp"
-    android:orientation="vertical"
-    app:cardElevation="0dp">
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardLeft"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
+        android:layout_margin="@dimen/_5sdp"
+        app:cardBackgroundColor="#f7f7f7"
+        app:cardCornerRadius="@dimen/_5sdp"
+        app:cardElevation="0dp"
+        app:contentPadding="@dimen/_5sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_5sdp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/llLeft"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_5sdp"
-                android:layout_marginRight="@dimen/_5sdp"
-                android:orientation="vertical">
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/tvTitle"
+                style="@style/TextAppearance.AppCompat.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="NA"
+                android:textColor="#2d2d2d"
+                app:edittextfont="Raleway-Regular.ttf" />
 
-                <com.yberry.dinehawaii.customview.CustomTextView
-                    android:id="@+id/tvTitle"
-                    style="@style/TextAppearance.AppCompat.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="NA"
-                    app:edittextfont="Raleway-Regular.ttf" />
-
-                <com.yberry.dinehawaii.customview.CustomTextView
-                    android:id="@+id/tvUserName"
-                    style="@style/TextAppearance.AppCompat.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="NA"
-                    app:edittextfont="Raleway-Regular.ttf" />
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/tvUserName"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:text="NA"
+                android:textColor="@color/edit_text_hint_color"
+                android:textSize="@dimen/_10sdp"
+                app:edittextfont="Raleway-Regular.ttf" />
 
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/llright"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_5sdp"
-                android:layout_marginRight="@dimen/_5sdp"
-                android:orientation="vertical">
-
-                <com.yberry.dinehawaii.customview.CustomTextView
-                    android:id="@+id/tvTitle1"
-                    style="@style/TextAppearance.AppCompat.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end"
-                    android:text="NA"
-                    app:edittextfont="Raleway-Regular.ttf" />
-
-                <com.yberry.dinehawaii.customview.CustomTextView
-                    android:id="@+id/tvUserName1"
-                    style="@style/TextAppearance.AppCompat.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end"
-                    android:text="NA"
-                    app:edittextfont="Raleway-Regular.ttf" />
-
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.8dp"
-                android:layout_margin="@dimen/_3sdp"
-                android:background="@color/colorDivider" />
         </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-    </LinearLayout>
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_margin="@dimen/_5sdp"
+        android:layout_marginLeft="@dimen/_30sdp"
+        app:cardBackgroundColor="#f7f7f7"
+        app:cardCornerRadius="@dimen/_5sdp"
+        app:cardElevation="0dp"
+        app:contentPadding="@dimen/_5sdp">
 
-</android.support.v7.widget.CardView>
+        <LinearLayout
+            android:id="@+id/llright"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_5sdp"
+            android:orientation="vertical">
+
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/tvTitle1"
+                style="@style/TextAppearance.AppCompat.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="NA"
+                android:textColor="#2d2d2d"
+                app:edittextfont="Raleway-Regular.ttf" />
+
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/tvUserName1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:text="NA"
+                android:textColor="@color/edit_text_hint_color"
+                android:textSize="@dimen/_10sdp"
+                app:edittextfont="Raleway-Regular.ttf" />
+
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
+
