--- a/app/src/main/res/layout/reply_dialog.xml
+++ b/app/src/main/res/layout/reply_dialog.xml
@@ -1,157 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:orientation="horizontal"
-    app:cardCornerRadius="@dimen/_5sdp">
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/mainRelativeFood"
+
+    <RelativeLayout
+        android:id="@+id/toolbar_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary">
+
+        <com.yberry.dinehawaii.customview.CustomTextView
+            android:id="@+id/foodTitle"
+            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:padding="@dimen/_5sdp"
+            android:text="Reply"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            app:edittextfont="Raleway-Bold.ttf" />
+
+        <ImageView
+            android:id="@+id/close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:padding="@dimen/_5sdp"
+            android:src="@drawable/ic_close_white_24dp" />
+
+    </RelativeLayout>
+
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar_bar"
+        android:layout_margin="@dimen/_8sdp"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:id="@+id/toolbar_bar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary">
-
-            <com.yberry.dinehawaii.customview.CustomTextView
-                android:id="@+id/foodTitle"
-                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:padding="@dimen/_5sdp"
-                android:text="Reply"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                app:edittextfont="Raleway-Bold.ttf" />
-
-            <ImageView
-                android:id="@+id/close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:padding="@dimen/_5sdp"
-                android:src="@drawable/ic_close_white_24dp" />
-
-
-        </RelativeLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/toolbar_bar"
             android:orientation="vertical">
 
-            <com.yberry.dinehawaii.customview.CustomTextView
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_9sdp"
-                android:drawablePadding="@dimen/_5sdp"
-                android:gravity="center"
-                android:text="Reply Text"
-                android:textColor="@color/colorGreen"
-                app:edittextfont="Raleway-Bold.ttf" />
 
-            <com.yberry.dinehawaii.customview.CustomEditText
-                android:id="@+id/etText"
-                style="@style/TextAppearance.AppCompat.Subhead"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:height="@dimen/_100sdp"
                 android:background="@drawable/bgrectangle"
-                android:gravity="start"
-                android:hint="Enter reply text."
-                android:maxLines="4"
-                android:padding="@dimen/_5sdp"
-                app:edittextfont="Raleway-Regular.ttf" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/toolbar_bar"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <com.yberry.dinehawaii.customview.CustomTextView
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_9sdp"
-                android:drawablePadding="@dimen/_5sdp"
-                android:gravity="center"
-                android:text="Status"
-                android:textColor="@color/colorGreen"
-                app:edittextfont="Raleway-Bold.ttf" />
-
-            <RadioGroup
-                android:id="@+id/rgStatus"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_9sdp"
                 android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/rbNone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:text="None" />
+                <com.yberry.dinehawaii.customview.CustomEditText
+                    android:id="@+id/etText"
+                    style="@style/TextAppearance.AppCompat.Small"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.9"
+                    android:background="@null"
+                    android:hint="Enter reply text."
+                    android:maxLines="1"
+                    android:padding="@dimen/_5sdp"
+                    android:singleLine="true"
+                    app:edittextfont="Raleway-Regular.ttf" />
 
-                <RadioButton
-                    android:id="@+id/rbSolution"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_5sdp"
-                    android:text="Solution" />
-
-                <RadioButton
-                    android:id="@+id/rbResolved"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_5sdp"
-                    android:text="Resolved" />
-            </RadioGroup>
+                <com.yberry.dinehawaii.customview.CustomButton
+                    android:id="@+id/dsubmit"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginRight="@dimen/_5sdp"
+                    android:layout_weight="0.1"
+                    android:background="@null"
+                    android:drawableRight="@drawable/ic_send_black_24dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="@color/colorPrimary"
+                    android:textStyle="bold"
+                    app:edittextfont="@string/raleway_bold" />
+            </LinearLayout>
         </LinearLayout>
 
+    </android.support.v4.widget.NestedScrollView>
 
-        <com.yberry.dinehawaii.customview.CustomButton
-            android:id="@+id/dsubmit"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar_bar"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <com.yberry.dinehawaii.customview.CustomTextView
             style="@style/TextAppearance.AppCompat.Subhead"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_9sdp"
+            android:drawablePadding="@dimen/_5sdp"
+            android:gravity="center"
+            android:text="Status"
+            android:textColor="@color/colorGreen"
+            app:edittextfont="Raleway-Bold.ttf" />
+
+        <RadioGroup
+            android:id="@+id/rgStatus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:background="@drawable/button_border_green"
-            android:gravity="center"
-            android:text="Send"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_10sdp"
-            app:edittextfont="@string/raleway_bold" />
+            android:layout_marginTop="@dimen/_9sdp"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rbNone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="None" />
+
+            <RadioButton
+                android:id="@+id/rbSolution"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:text="Solution" />
+
+            <RadioButton
+                android:id="@+id/rbResolved"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:text="Resolved" />
+        </RadioGroup>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+
+
+</LinearLayout>
 
 
 
